start implement push kubeconfig

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary justify-content-between">
-      <a class="navbar-brand" href="#">Kubectl Login Server</a>
+      <a class="navbar-brand" href="#">Kubectl OpenID Connect</a>
     
       <form class="form-inline my-2 my-lg-0">
         <button class="btn btn-outline-light my-2 my-sm-0" type="submit" formaction="/logout">Logout</button>
