--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Kubectl Login Server</title>
+    <title>Kubectl OIDC Auth Server</title>
 
     <link rel="stylesheet" href="{{ url_for('static',filename='bootstrap.min.css') }}" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="{{ url_for('static',filename='jquery-3.2.1.slim.min.js') }}" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -18,7 +18,7 @@
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary justify-content-between">
-      <a class="navbar-brand" href="#">Kubectl OpenID Connect</a>
+      <a class="navbar-brand" href="#">Kubectl OIDC Auth</a>
     
       <form class="form-inline my-2 my-lg-0">
         <button class="btn btn-outline-light my-2 my-sm-0" type="submit" formaction="/logout">Logout</button>
@@ -47,9 +47,16 @@
       <div class="card mb-4 mx-5">
         <h5 class="card-header" id="list-item-1">Kubectl Plugin</h5>
         <div class="card-body">
-          <h5 class="card-title">Install <code>kubectl</code> plugin.</h5>
+          <h5 class="card-title">Install as Kubectl plugin.</h5><pre><code># Homebrew (macOS and Linux)
+brew install devopstales/kubeauth/kubeauth-plugin
+
+# Krew (macOS, Linux, Windows and ARM)
+kubectl krew install oidc-auth
+
+# Chocolatey (Windows)
+choco install kubeauth-plugin</code></pre>
           <h5 class="card-title">Use the plugin.</h5>
-          <pre><code class="bash">$ kubectl login {{ redirect_uri }}
+          <pre><code class="bash">$ kubectl auth {{ redirect_uri }}
 Write config for {{ context }} to ~/.kube/config
 (Press CTRL+C to quit)</code></pre>
         </div>
